[gd_scene load_steps=28 format=3 uid="uid://dffibcq8yx4ff"]

[ext_resource type="Script" uid="uid://b7kx2c1k3ghrd" path="res://scripts/muralla_enemiga.gd" id="1_0n11m"]
[ext_resource type="Shader" uid="uid://d2s77gebv4ra8" path="res://shaders/damage.gdshader" id="1_imfvb"]
[ext_resource type="Texture2D" uid="uid://bsynl3770v1uq" path="res://assets/img/Muralla Enemiga/Muralla_enemiga.png" id="3_0n11m"]
[ext_resource type="Texture2D" uid="uid://brfapmc4fr52m" path="res://assets/img/Explotion.png" id="4_kbltv"]
[ext_resource type="AudioStream" uid="uid://cvnq8h8erigjy" path="res://assets/sound/glass.wav" id="5_4gyx6"]
[ext_resource type="Texture2D" uid="uid://dofifx0fc1b85" path="res://assets/img/Muralla Enemiga/murallae_rota.png" id="6_3qxj3"]
[ext_resource type="Texture2D" uid="uid://c0h0fm475agid" path="res://assets/img/Muralla Enemiga/murallaa_rota.png" id="7_nvgxk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7lweu"]
shader = ExtResource("1_imfvb")
shader_parameter/effect_enabled = false
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/base_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imfvb"]
size = Vector2(209, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixsww"]
atlas = ExtResource("4_kbltv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0sp2"]
atlas = ExtResource("4_kbltv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_auadv"]
atlas = ExtResource("4_kbltv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rceni"]
atlas = ExtResource("4_kbltv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvkct"]
atlas = ExtResource("4_kbltv")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqa2b"]
atlas = ExtResource("4_kbltv")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw3ra"]
atlas = ExtResource("4_kbltv")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_23fi2"]
atlas = ExtResource("4_kbltv")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blq51"]
atlas = ExtResource("4_kbltv")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtea8"]
atlas = ExtResource("4_kbltv")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfwui"]
atlas = ExtResource("4_kbltv")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2mmq"]
atlas = ExtResource("4_kbltv")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8trpq"]
atlas = ExtResource("4_kbltv")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p52b1"]
atlas = ExtResource("4_kbltv")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_egmn4"]
atlas = ExtResource("4_kbltv")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4yoi"]
atlas = ExtResource("4_kbltv")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3qxj3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixsww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0sp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auadv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rceni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvkct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqa2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw3ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23fi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blq51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtea8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2mmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8trpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p52b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egmn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4yoi")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kbltv"]
size = Vector2(206, 68)

[node name="MurallaEnemiga" type="Area2D" groups=["Muralla Enemiga"]]
collision_layer = 256
collision_mask = 66
script = ExtResource("1_0n11m")
health = 40

[node name="Muralla" type="Sprite2D" parent="."]
modulate = Color(0.755386, 0.755386, 0.755386, 1)
texture_filter = 1
material = SubResource("ShaderMaterial_7lweu")
position = Vector2(-21, 5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_0n11m")
flip_h = true

[node name="Muralla2" type="Sprite2D" parent="."]
modulate = Color(0.755386, 0.755386, 0.755386, 1)
texture_filter = 1
material = SubResource("ShaderMaterial_7lweu")
position = Vector2(53, -14)
scale = Vector2(3.5, 3.5)
texture = ExtResource("3_0n11m")

[node name="Muralla3" type="Sprite2D" parent="."]
modulate = Color(0.755386, 0.755386, 0.755386, 1)
texture_filter = 1
material = SubResource("ShaderMaterial_7lweu")
position = Vector2(123, 5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_0n11m")

[node name="MurallaCollision" type="CollisionShape2D" parent="."]
position = Vector2(52.5, 16)
shape = SubResource("RectangleShape2D_imfvb")

[node name="Explotion" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(8, -15)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_3qxj3")
frame = 15
frame_progress = 1.0

[node name="Explotion2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4gyx6")
volume_db = -12.0
pitch_scale = 0.6

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 256
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2(53, 10)
shape = SubResource("RectangleShape2D_kbltv")
debug_color = Color(0.265772, 0.873438, 1, 0.42)

[node name="MurallaRota" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(91, -21)
scale = Vector2(4, 4)
texture = ExtResource("6_3qxj3")

[node name="MurallaRota2" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-7, -31)
scale = Vector2(4, 4)
texture = ExtResource("7_nvgxk")
